# desktop-test-app

./: README.md  package.json
.github/workflows/: build-release.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  clipboard.rs  lib.rs  main.rs  state.rs
